scss/template/search-bar.scss
header{
    padding: 0;
    .header-content{
        .search-container{
            position: relative;
            max-width: 800px;
            width: 100%;
            .sf-button.form__action-button{
                position: absolute;
                right: 60px;
                top: 25px;
                font-size: 14px;
                text-decoration: none;
                font-family: 'Poppins-Bold';
                color: var(--_c-green-primary-lighten);
            }
            @media screen and (max-width: 1024px){
                position: fixed;
                top: 0;
                left: 0;              
                z-index: 99999;
                max-width: 100%;
                width: 100%;
                margin: 0;
                padding: 0!important;
                transition: all 0.5s ease-in-out;
                .o-search{
                    background-color: var(--c-white);
                    padding: 15px;
                }
                .sf-button{
                    top: 40px!important;
                    right: 75px!important;
                } 
                .o-search-panel{
                    top: 96px;
                    @media screen and (max-width: 767px){
                        height: calc(100vh - 97px);
                        .container{
                            height: 100%;
                        }
                    }
                    .no-results{
                        height: auto;
                        line-height: normal;
                        padding: 10px 0;
                        padding-top: 30px;
                    }
                    .container{
                        padding: 0 20px;
                        flex-direction: revert;
                        .products{
                            &__listing{
                                overflow: auto; 
                            }
                        }
                    }
                }
            }
            @media screen and (max-width: 767px){
                .o-search-panel{
                    .container{
                        flex-direction: column;
                        overflow: scroll;
                    }
                }
            }
        }
    }
    .sf-search-bar{
        width: 100%;
        height: auto;
        @media screen and (max-width: 1380px){
            --search-bar-width: 30rem;
            display: block;
        }
        input{
            border-bottom: 0;
            text-indent: 15px;
            height: 50px;
            border: 1px solid var(--_c-gray-accent);
            border-radius: 3px;
            box-shadow: 0px 0px 0px 6px var(--_c-gray-accent);
            &:focus{
                outline: none;
                border-color: var(--_c-green-primary-lighten);
            }
        }
        .sf-search-bar__icon{
            background-color: var(--_c-green-primary-lighten);
            height: 44px;
            display: flex;
            align-items: center;
            top: 3px;
            padding:  0 5px;
            border-radius: 3px;
            right: 3px;
            padding: 0 10px;
            border-radius: 3px;
            svg{
                fill: $white-color; 
            }
        }  
        + .o-search-panel{
            top: 110px;
            z-index: 2;
            box-shadow: 0px 100vh 0 100vh rgba(0, 0, 0, 0.7);
        }
    }
    .o-search-panel{
        .no-results{
            background-image: url('/assets/loading.gif');
            background-size: 24px;
            background-repeat: no-repeat;
            background-position: 50% 7px;
        }
        .products{
            &__listing{
                .sf-product-card{
                    display: flex;
                    flex-direction: column;
                    &__image-wrapper{
                        order: 1;
                    }
                    &__link{
                        order: 2;
                        border: 0;
                    }
                    &__price{
                        order: 4;
                        padding: 0 15px;
                        height: auto;
                    }
                    &__reviews{
                        order: 3;
                        padding: 0 15px;
                    }
                }
            }
        }
    }
}

